--- a/StudentRest-HTML-JPA/WebContent/Login.html
+++ b/StudentRest-HTML-JPA/WebContent/Login.html
@@ -34,7 +34,7 @@
                                     <input type="text" class="form-control" id="username" placeholder="Username" name="userName" type="email" autofocus="">
                                 </div>
                                 <div class="form-group">
-                                    <input type="text" class="form-control" id="password" placeholder="Password" name="password" type="password" value="">
+                                    <input type="password" class="form-control" id="password" placeholder="Password" name="password" type="password" value="">
                                 </div>
                                
                                 <!-- Change this to a button or input when using this as a form -->
