--- a/StudentRest-HTML-JPA/WebContent/EditGuest.html
+++ b/StudentRest-HTML-JPA/WebContent/EditGuest.html
@@ -451,7 +451,7 @@
 
 				</div>
 				<div class="panel-body">
-					<table id="whiteListTable" class="table table-striped table-hover ">
+					<table class="table table-striped table-hover ">
 						<thead>
 							<tr>
 								<th>Guest</th>
