--- a/StudentRest-HTML-JPA/WebContent/GuestListTable.html
+++ b/StudentRest-HTML-JPA/WebContent/GuestListTable.html
@@ -19,6 +19,9 @@
 </head>
 <body>
 	<script type="text/javascript">
+	$(document).ready(function() {
+		$('#title').html("Seating Arrangement - " + localStorage.clientName + " - "+ localStorage.venueName);
+	});
 	function getCookie(cname) {
 		console.log("get cookie");
 		var name = cname + "=";
@@ -71,7 +74,7 @@
 
 								$('#guest_table')
 										.html(
-												'<thead><tr><th>Guest Name</th><th>Table</th></tr></thead>');
+												'<thead><tr><th class=\"col-sm-6 col-md-6 col-lg-6\">Guest Name</th><th class=\"col-sm-6 col-md-6 col-lg-6\">Table</th></tr></thead>');
 
 								var guests = [];
 								var keys = [];
@@ -95,8 +98,8 @@
 									var guest = guests[key];
 									console.log(guest);
 									tableRow = "<tr>" 
-											+ "<td>" + guest.name + "</td>" 
-											+ "<td>" + guest.eventTableNumber + "</td>"
+											+ "<td class=\"col-sm-6 col-md-6 col-lg-6\">" + guest.name + "</td>" 
+											+ "<td class=\"col-sm-6 col-md-6 col-lg-6\">" + guest.eventTableNumber + "</td>"
 											+ "</tr>";
 
 									$('#guest_table').append(tableRow);
@@ -112,18 +115,24 @@
 		}
 	</script>
 	<div id="nav-container"></div>
-	<div class="col-sm-12 col-md-12 col-lg-12">
-		<h1>Seating Arrangement</h1>
-		<div id="tables-nav"></div>
+	
 		<div class="container">
+		<div class="col-sm-12 col-md-12 col-lg-12">
+		<h2 id="title">Seating Arrangement</h2>
+		<div id="tables-nav"></div>
 			<div class="row">
-				<h1>Guests</h1>
+				<h3>Guests</h3>
 				<button class="btn btn-xs btn-default pull-right" onclick="window.print();">Print</button>
 			</div>
 			<hr />
 
+ 
 			<div class="row">
+			<div class="panel panel-primary"> 
+  			<div class="panel-body">
 				<table class="table table-striped table-hover" id="guest_table"></table>
+			</div>
+			 </div>
 			</div>
 		</div>
 	</div>
