--- a/StudentRest-HTML-JPA/WebContent/TablesNav.html
+++ b/StudentRest-HTML-JPA/WebContent/TablesNav.html
@@ -36,13 +36,17 @@ function generateSeatingArrangement(){
 		}
 	}
   </script>
-
+<div class="row">
+<div class="col-sm-12 col-md-12 col-lg-12">
+	<a href="/StudentRest-HTML-JPA/WebContent/EditEvent.html" class="pull-right">Return to Event</a>
+</div>
+</div>
 <div class="row">
     	<div class="col-sm-12 col-md-12 col-lg-12">
     	
     	<div class="btn-group btn-group-justified">
     		<a href="#" id="generateSeatingArrangement" class="btn btn-info">Generate Seating</a>
-    		<a href="/StudentRest-HTML-JPA/WebContent/EditSeatingArrangement.html" class="btn btn-info">Edit Seating Arrangement</a>
+    		<a href="/StudentRest-HTML-JPA/WebContent/EditSeatingArrangement.html" id="btnEditSeatingArrangement" class="btn btn-info">Edit Seating Arrangement</a>
     		<a href="/StudentRest-HTML-JPA/WebContent/GuestListTable.html" id="btnGuestListView" class="btn btn-info">Guest List View</a>
     		<a href="/StudentRest-HTML-JPA/WebContent/PrintTablesList.html" id="btnTableView" class="btn btn-info">Table View</a>
     		<a href="/StudentRest-HTML-JPA/WebContent/PlaceCards.html" id ="btnPlaceCard" class="btn btn-info">PlaceCards</a>
