--- a/StudentRest-HTML-JPA/WebContent/ClientList.html
+++ b/StudentRest-HTML-JPA/WebContent/ClientList.html
@@ -154,7 +154,10 @@ $(document).ready(function() {
 				class="btn btn-xs btn-primary pull-right"><i
 				class="glyphicon glyphicon-plus"></i>New Client</a>
 		</div>
+		<hr>
 		<div class="row">
+		<div class="panel panel-primary"> 
+  			<div class="panel-body">
 			<table class="table table-striped table-hover ">
 				<thead>
 					<tr>
@@ -168,6 +171,8 @@ $(document).ready(function() {
 
 				</tbody>
 			</table>
+		</div>
+		</div>
 		</div>
 
 	</div>
