--- a/StudentRest-HTML-JPA/WebContent/EditSeatingArrangement.html
+++ b/StudentRest-HTML-JPA/WebContent/EditSeatingArrangement.html
@@ -11,6 +11,7 @@
 <script type="text/javascript">
 	$(document).ready(function() {
 		$('#nav-container').load('nav.html');
+		localStorage.tablesNavSelect = "btnEditSeatingArrangement";
 		$('#tables-nav').load('TablesNav.html');
 		loadUsersTable();
 	});
@@ -18,7 +19,9 @@
 </head>
 <body>
 	<script type="text/javascript">
-	
+	$(document).ready(function() {
+		$('#title').html("Edit Seating Arrangement - " + localStorage.clientName + " - "+ localStorage.venueName);
+	});
 		function getCookie(cname) {
 			console.log("get cookie");
 			var name = cname + "=";
@@ -70,8 +73,7 @@
 							success : function(resp) {
 								// we have the response  
 
-								$('#guest_table')
-										.html('');
+								$('#guest_tables').html('');
 
 								var guests = [];
 								var tableNums = [];
@@ -103,6 +105,7 @@
 								});
 								var table;
 								var selectTableNums = "<select>";
+								selectTableNums += "<option value=\"0\"></option>";
 								$.each( listTablesWithId, function( index, value ){
 									selectTableNums  += "<option value=\""+ value.id +"\">" + value.number + "</option>";	
 								});
@@ -116,14 +119,14 @@
 											+ '</h3></div>'
 											+ '<div class="panel-body">'
 											+ '<div class="row"><table class="table table-striped table-hover">'
-											+ '<thead><tr><th>Guest Name</th><th>Move to Table</th></tr></thead><tbody>';
+											+ '<thead><tr><th class=\"col-sm-6 col-md-6 col-lg-6\">Guest Name</th><th class=\"col-sm-6 col-md-6 col-lg-6\">Move to Table</th></tr></thead><tbody>';
 									var tableGuests = guests[key];
 									for (var j = 0; j < tableGuests.length; j++) {
 										guest = tableGuests[j];
 										console.log(guest);
 										table = table + "<tr>" 
-												+ "<td>" + guest.name + "</td>"
-												+"<td>"+ selectTableNums +"<a href=\"#\" onclick=\"moveGuest(this," + guest.guestId + ")\">Move</a></td></tr>";
+												+ "<td class=\"col-sm-6 col-md-6 col-lg-6\">" + guest.name + "</td>"
+												+"<td class=\"col-sm-6 col-md-6 col-lg-6\">"+ selectTableNums +"<a href=\"#\" onclick=\"moveGuest(this," + guest.guestId + ")\">Move</a></td></tr>";
 									}
 									table = table
 											+ '</tbody></div></div></table></div>';
@@ -169,12 +172,12 @@
 		        	  console.log("textStatus --" + textStatus);
 		        	  console.log("THE STATUS-----" + xhr.status);
 		        	  console.log(xhr.responseText);
-		        	  alert("Guest has moved!");
+		        	
 		        	  loadUsersTable();
 		          },
 		          error: function (e) {
 		              console.log("ERROR : ", e.responseText);
-		              alert("The Guest is not allowed to move there.");
+		              alert("There was an error moving the guest.");
 		              loadUsersTable();
 		          },
 			       beforeSend : setHeader
@@ -189,11 +192,11 @@
 	<div class="container">
 
 		<div class="col-sm-12 col-md-12 col-lg-12">
-			<h1>Edit Seating Arrangement</h1>
+			<h2 id="title">Edit Seating Arrangement </h2>
 			<div id="tables-nav"></div>
 			<div class="container">
 				<div class="row">
-					<h1>Guests</h1>
+					<h3>Guests</h3>
 					<button class="btn btn-xs btn-default pull-right" onclick="window.print();">Print</button>
 				</div>
 				<hr />
