--- a/StudentRest-HTML-JPA/WebContent/Logout.html
+++ b/StudentRest-HTML-JPA/WebContent/Logout.html
@@ -24,7 +24,7 @@
 
 	<div class="container">
 		<div id="nav-container"></div>
-		<div class="col-md-4 ">
+		<div class="col-sm-4 col-md-4 col-lg-4 col-lg-offset-4">
 			<div class="panel panel-default">
 				<div class="panel-heading">
 					<h3 class="panel-title">Sign Out</h3>
