--- a/StudentRest-HTML-JPA/WebContent/ClientList.html
+++ b/StudentRest-HTML-JPA/WebContent/ClientList.html
@@ -167,7 +167,7 @@ $(document).ready(function() {
 
 					</tr>
 				</thead>
-				<tbody id="clientsTable">
+				<tbody id="clientsTable" class="scroll-panel">
 
 				</tbody>
 			</table>
