--- a/StudentRest-HTML-JPA/WebContent/Index.html
+++ b/StudentRest-HTML-JPA/WebContent/Index.html
@@ -408,6 +408,7 @@
 									<th>Date</th>
 									<th>Time</th>
 									<th>Venue</th>
+									<th>Actions</th>
 								</tr>
 							</thead>
 							<tbody id="eventTable">
