--- a/StudentRest-HTML-JPA/WebContent/EditClient.html
+++ b/StudentRest-HTML-JPA/WebContent/EditClient.html
@@ -185,12 +185,16 @@
         <input type="text" class="form-control" id="inputEmail" name="email" placeholder="Email">
       </div>
     </div>
-        <div class="form-group pull-right">
-      	<div class="col-lg-10 col-lg-offset-2">
-        <button type="submit" id="btnSubmit" class="btn btn-primary">Submit</button>
-        <button type="reset" id="btnCancel" class="btn btn-default">Cancel</button>     
+<!--         <div class="form-group pull-right"> -->
+	<div class="col-md-12 col-lg-12">
+	<div class="form-group pull-right">
+      	<div class="btn-block">
+        <button type="submit" id="btnSubmit" class="btn btn-sm btn-primary" >Submit</button>
+        <button type="reset" id="btnCancel" class="btn btn-sm btn-default">Cancel</button>     
       </div>
-    </div>
+      </div>
+      </div>
+<!--     </div> -->
 </fieldset>
 
 </form>
