--- a/StudentRest-HTML-JPA/WebContent/UserEdit.html
+++ b/StudentRest-HTML-JPA/WebContent/UserEdit.html
@@ -227,11 +227,13 @@
         <input type="text" class="form-control" id="inputEmail" name="email" placeholder="Email">
       </div>
     </div>
-        <div class="form-group pull-right">
-      <div class="col-lg-10 col-lg-offset-2">
-        <button id="btnSubmit" type="submit" class="btn btn-primary">Submit</button>
-        <button type="reset" id="btnCancel" class="btn btn-default">Cancel</button>
-        
+  
+      <div class="col-lg-12 col-lg-12">
+       <div class="form-group pull-right">
+      <div class="btn-block">
+        <button id="btnSubmit" type="submit" class="btn btn-sm btn-primary">Submit</button>
+        <button type="reset" id="btnCancel" class="btn btn-sm btn-default">Cancel</button>
+        </div>
       </div>
     </div>
 </fieldset>
