fixed something I broke in ui cleanup

--- a/StudentRest-HTML-JPA/WebContent/EditEvent.html
+++ b/StudentRest-HTML-JPA/WebContent/EditEvent.html
@@ -493,7 +493,7 @@ function loadPlanners(){
 											Event Title
 										</label>
 										<div class="col-lg-10">
-											<input type="text" class="form-control id="inputTitle" name="eventTitle"	placeholder="Event Title">
+											<input type="text" class="form-control" id="inputTitle" name="eventTitle"	placeholder="Event Title">
 										</div>
 									</div>
 									<div class="form-group form-group-sm">
@@ -605,7 +605,7 @@ function loadPlanners(){
 <!-- 									</label> -->
 <!-- 								</div> -->
 							</div>
-							<button id="btnImport" type="button" class="btn btn-sm btn-success">Import</button>
+							<button id="btnImport" type="button" class="btn btn-xs btn-success">Import</button>
 						</div>
 					</div>
 						<hr>
