--- a/StudentRest-HTML-JPA/WebContent/Login.html
+++ b/StudentRest-HTML-JPA/WebContent/Login.html
@@ -38,7 +38,7 @@
                                 </div>
                                
                                 <!-- Change this to a button or input when using this as a form -->
-                                <button class="btn btn-sm btn-success" type="submit" id="btnSubmit">Login</a>
+                                <button class="btn btn-sm btn-success" type="submit" id="btnSubmit">Login</button>
                             </fieldset>
                         </form>
                     </div>
