--- a/StudentRest-HTML-JPA/WebContent/Logout.html
+++ b/StudentRest-HTML-JPA/WebContent/Logout.html
@@ -38,10 +38,10 @@
 					<!-- Change this to a button or input when using this as a form -->
 					<div class="col-sm-12 col-md-12 col-lg-12">
 						<button class="btn btn-sm btn-success center-block"
-							onclick="deleteToken()"">Logout</button>
+							onclick="deleteToken()">Logout</button>
 					</div>
-					</fieldset>
-					</form>
+					<!--  </fieldset>
+					</form>-->
 				</div>
 			</div>
 		</div>
