--- a/StudentRest-HTML-JPA/WebContent/PrintTablesList.html
+++ b/StudentRest-HTML-JPA/WebContent/PrintTablesList.html
@@ -88,7 +88,7 @@
 													if(guest.guestFitness == null){
 														console.log("Guest fitness null");
 														hasSeatingArrangment = false;
-														$('#guest_tables').html("<h1>No Seating Arrangment has been generated</h1");
+														$('#guest_tables').html("<h1>No Seating Arrangement has been generated</h1");
 														return false;
 													}else if (guest.eventTableNumber == null) {
 														alert("No table for guest "
