--- a/StudentRest-HTML-JPA/WebContent/EditSeatingArrangement.html
+++ b/StudentRest-HTML-JPA/WebContent/EditSeatingArrangement.html
@@ -86,7 +86,7 @@
 													if(guest.guestFitness == null){
 														console.log("Guest fitness null");
 														hasSeatingArrangment = false;
-														$('#guest_tables').html("<h1>No Seating Arrangment has been generated</h1");
+														$('#guest_tables').html("<h1>No Seating Arrangement has been generated</h1");
 														return false;
 									        	 }
 													if (guest.eventTableNumber == null) {
