--- a/StudentRest-HTML-JPA/WebContent/GuestListTable.html
+++ b/StudentRest-HTML-JPA/WebContent/GuestListTable.html
@@ -83,7 +83,7 @@
 									if(guest.guestFitness == null){
 										console.log("Guest fitness null");
 										hasSeatingArrangment = false;
-										$('#guest_table').html("<h1>No Seating Arrangment has been generated</h1");
+										$('#guest_table').html("<h1>No Seating Arrangement has been generated</h1");
 										return false;
 					        	 	}
 									if (guest.eventTableNumber == null){
